--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,6 +60,14 @@ jobs:
       - name: Run tests
         run: |
           npm run test
+
+      # Step: Save reports as an artifact
+      - name: Upload Cucumber HTML Report as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: cucumber-reports  # Nom de l'artefact
+          path: reports/cucumber_report_chromium_*.html  # Chemin du fichier généré
+          
       - name: Send email with the test report
         if: always()  # Cette étape sera exécutée même si les tests échouent
         uses: dawidd6/action-send-mail@v3
