--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,9 +61,13 @@ jobs:
         run: |
           npm run test
 
+      # Liste des fichiers dans le répertoire de rapports pour déboguer
+      - name: List files in reports directory
+        run: ls -al reports/
+
       # Step: Save reports as an artifact
       - name: Upload Cucumber HTML Report as artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: cucumber-reports  # Nom de l'artefact
           path: reports/cucumber_report_chromium_*.html  # Chemin du fichier généré
