--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -59,7 +59,13 @@ jobs:
       # Run tests (Cucumber and Playwright tests)
       - name: Run tests
         run: |
-          $env:HEADLESS="true"; npm test
+          if [ "$RUN_MODE" == "headless" ]; then
+            export HEADLESS=true
+          else
+            export HEADLESS=false
+          fi
+          echo "HEADLESS=$HEADLESS"
+          npm test
 
       # Liste des fichiers dans le répertoire de rapports pour déboguer
       - name: List files in reports directory
